@@ -1,13 +1,14 @@
 import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.Stack;
+import java.util.Queue;
 
 public class Query {
     private String query;
-    private Stack<List<PostingNode>> resultStack;
     private TextPreprocessor preprocessor;
     private BooleanModel model;
     private TolerantRetrieval tolerant;
@@ -15,7 +16,6 @@ public class Query {
 
     public Query(String query) {
         this.query = query.trim().toLowerCase();
-        this.resultStack = new Stack<>();
         this.preprocessor = new TextPreprocessor();
         this.model = new BooleanModel();
         this.tolerant = new TolerantRetrieval();
@@ -38,127 +38,111 @@ public class Query {
     // }
     private static final Map<String, Integer> ORDER = new HashMap<>();
     static {
-        ORDER.put("OR", 1);
-        ORDER.put("AND", 2);
-        ORDER.put("NOT", 3);
+        ORDER.put("or", 1);
+        ORDER.put("and", 2);
+        ORDER.put("not", 3);
     }
 
     public boolean isOperator(String kata) {
-        return kata.equals("and") || kata.equals("or") || kata.equals("not");
+        return ORDER.containsKey(kata.toLowerCase());
     }
 
     public List<PostingNode> preProcess() {
-        List<String> splittedQuery = splitQuery();
-        List<String> terms = null;
+        List<String> tokens = splitQuery();
+        List<String> postfix = shuntingYard(tokens);
+        return evaluate(postfix);
+    }
 
-        Stack<String> orderProcess = new Stack<>();
-        Stack<String> operator = new Stack<>();
+    private List<String> shuntingYard(List<String> tokens) {
+        Queue<String> outputQueue = new LinkedList<>();
+        Deque<String> operatorStack = new ArrayDeque<>();
 
-        for (String kata : splittedQuery) {
-            if (kata.charAt(0) == '(') {
-                operator.push(kata);
-            } else if (kata.equals(")")) {
-                while (!operator.isEmpty() && !operator.peek().equals("(")) {
-                    orderProcess.push(operator.pop());
+        for (String raw : tokens) {
+            String token = isOperator(raw) ? raw.toLowerCase() : raw;
+
+            if (isOperator(token)) {
+                while (!operatorStack.isEmpty()
+                        && isOperator(operatorStack.peek())
+                        && ORDER.get(operatorStack.peek()) >= ORDER.get(token)) {
+                    outputQueue.add(operatorStack.pop());
                 }
-                operator.push(kata);
-            } else if (isOperator(kata)) {
-                while (!operator.isEmpty()
-                        && isOperator(operator.peek())
-                        && ORDER.get(operator.peek()) >= ORDER.get(kata)) {
-                    orderProcess.push(operator.pop());
+                operatorStack.push(token);
+
+            } else if (token.equals("(")) {
+                operatorStack.push(token);
+
+            } else if (token.equals(")")) {
+                while (!operatorStack.isEmpty() && !operatorStack.peek().equals("(")) {
+                    outputQueue.add(operatorStack.pop());
                 }
-                operator.push(kata);
+                if (!operatorStack.isEmpty())
+                    operatorStack.pop();
+
+            } else {
+                String corrected = tolerant.correct(token);
+                List<String> stemmed = preprocessor.process(corrected);
+                for (String s : stemmed) {
+                    outputQueue.add(s);
+                }
             }
         }
 
-         while (!operator.isEmpty()) {
-            orderProcess.add(operator.pop());
+        while (!operatorStack.isEmpty()) {
+            outputQueue.add(operatorStack.pop());
         }
 
-        // return new ArrayList<>(orderProcess);
-        return null;
-        // List<String> splittedQuery = splitQuery();
-        // List<String> terms = null;
-        // for (String kata : splittedQuery) {
-        // if (kata.charAt(0) != ')') {
-        // orderProcess.push(kata);
-        // } else {
-        // String queryNoBracket = "";
-        // while (!orderProcess.peek().equals("(")) {
-        // queryNoBracket = orderProcess.pop() + " " + queryNoBracket;
-        // }
-        // orderProcess.pop();
+        return new ArrayList<>(outputQueue);
+    }
 
-        // String[] queries = queryNoBracket.trim().split("\\s+");
-        // terms = new ArrayList<>();
+    private List<PostingNode> evaluate(List<String> postfix) {
+        Deque<List<PostingNode>> resultStack = new ArrayDeque<>();
 
-        // for (int i = 0; i < queries.length; i++) {
-        // if (!queries[i].equals("not")
-        // && !queries[i].equals("and")
-        // && !queries[i].equals("or")) {
-        // List<String> res = preprocessor.process(queries[i]);
-        // for (String term : res)
-        // terms.add(term);
-        // } else {
-        // terms.add(queries[i]);
-        // }
-        // }
+        for (String token : postfix) {
+            if (token.equals("not")) {
+                if (resultStack.isEmpty())
+                    return new ArrayList<>();
+                List<PostingNode> operand = resultStack.pop();
+                if (operand.isEmpty())
+                    return new ArrayList<>();
+                resultStack.push(assignPointer(model.negate(operand.getFirst())));
 
-        // boolean startsWithOperator = !terms.isEmpty()
-        // && (terms.get(0).equals("and")
-        // || terms.get(0).equals("or")
-        // || terms.get(0).equals("not"));
+            } else if (token.equals("and")) {
+                if (resultStack.size() < 2)
+                    return new ArrayList<>();
+                List<PostingNode> right = resultStack.pop();
+                List<PostingNode> left = resultStack.pop();
+                if (right.isEmpty() || left.isEmpty()) {
+                    resultStack.push(new ArrayList<>());
+                } else {
+                    resultStack.push(assignPointer(
+                            model.intersect(left.getFirst(), right.getFirst())));
+                }
 
-        // if (startsWithOperator && !resultStack.isEmpty()) {
-        // List<PostingNode> prevResult = resultStack.pop();
-        // resultStack.push(model.process(terms, prevResult));
-        // } else {
-        // resultStack.push(model.process(terms));
-        // }
+            } else if (token.equals("or")) {
+                if (resultStack.size() < 2)
+                    return new ArrayList<>();
+                List<PostingNode> right = resultStack.pop();
+                List<PostingNode> left = resultStack.pop();
+                if (right.isEmpty() && left.isEmpty()) {
+                    resultStack.push(new ArrayList<>());
+                } else if (right.isEmpty()) {
+                    resultStack.push(left);
+                } else if (left.isEmpty()) {
+                    resultStack.push(right);
+                } else {
+                    resultStack.push(assignPointer(
+                            model.union(left.getFirst(), right.getFirst())));
+                }
 
-        // // process sub bagian query, taro
-        // // resultStack.push(processQuery(terms));
-        // }
-        // }
+            } else {
+                // Term → ambil posting list dari index
+                List<PostingNode> posting = invertedIndex.getPostingList(token);
+                resultStack.push(posting != null ? posting : new ArrayList<>());
+            }
+        }
 
-        // // jika order process masih ada isi
-        // if (!this.orderProcess.isEmpty()) {
-        // // Kumpulkan semua sisa token dengan urutan yang benar
-        // List<String> remaining = new ArrayList<>();
-        // while (!orderProcess.isEmpty()) {
-        // remaining.add(0, orderProcess.pop()); // insert di depan agar urutan terjaga
-        // }
-
-        // // Gabungkan jadi string
-        // String queryNoBracket = String.join(" ", remaining);
-
-        // String[] queries = queryNoBracket.trim().split("\\s+");
-        // terms = new ArrayList<>();
-
-        // for (int i = 0; i < queries.length; i++) {
-        // if (!queries[i].equals("not")
-        // && !queries[i].equals("and")
-        // && !queries[i].equals("or")) {
-        // List<String> res = preprocessor.process(queries[i]);
-        // for (String term : res)
-        // terms.add(term);
-        // } else {
-        // terms.add(queries[i]);
-        // }
-        // }
-
-        // // process, simpen
-        // if (!resultStack.isEmpty()) {
-        // List<PostingNode> prevResult = resultStack.pop();
-        // resultStack.push(model.process(terms, prevResult));
-        // } else {
-        // resultStack.push(model.process(terms));
-        // }
-
-        // }
-
-        // return resultStack.isEmpty() ? new ArrayList<>() : resultStack.pop();
+        return resultStack.isEmpty() ? new ArrayList<>() : resultStack.pop();
+    }
 
     private List<PostingNode> assignPointer(List<PostingNode> nodes) {
         return model.assignPointer(nodes);
@@ -195,9 +179,4 @@ public class Query {
 
         return token;
     }
-    // (())
-    // if index i == 'AND', query.processAND(kata1,kata2)
-    // (unpar and (fakultas and informatika) or prabowo) and axel
-    // (, unpar, and, (, fakultas, and, informatika, ), or, prabowo, ), and, axel
-
 }
